Bug 480509 - Wallpapers Set Via Drag and Drop from Dolphin Do Not Persist After a Reboot
Summary: Wallpapers Set Via Drag and Drop from Dolphin Do Not Persist After a Reboot
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Image & Slideshow wallpaper plugins (other bugs)
Version First Reported In: 6.0.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression
: 497631 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-01-29 21:51 UTC by Dashon
Modified: 2025-01-02 23:33 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dashon 2024-01-29 21:51:24 UTC
SUMMARY
Hey, still testing out plasma 6 on arch and one thing I ran into is that if I download an image and try to drag and drop it onto the desktop to set it as the wallpaper via the pop up menu. It will work, but if I reboot or log out and back in. The wallpaper change does not persist and it goes back to whatever it was previously.


STEPS TO REPRODUCE
1. Download some image you want to use as a wallpaper.
2. Open dolphin and drag and drop it onto the desktop.
3. When the popup opens. Choose set image.

OBSERVED RESULT
It works initially, but after rebooting or logging out and back in the change does not persist.

EXPECTED RESULT
The wallpaper should be remembered.

SOFTWARE/OS VERSIONS
Operating System: EndeavourOS 
KDE Plasma Version: 5.92.0
KDE Frameworks Version: 5.248.0
Qt Version: 6.7.0
Kernel Version: 6.7.2-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 5800X 8-Core Processor
Memory: 62.7 GiB of RAM
Graphics Processor: NVIDIA GeForce RTX 3080/PCIe/SSE2
Manufacturer: Micro-Star International Co., Ltd.
Product Name: MS-7C95
System Version: 1.0
Comment 1 Doug 2024-01-30 06:06:46 UTC
Can confirm.  Neon Testing, Plasma 5.92.90, Frameworks 5.249.0, Qt 6.6.1
Comment 2 Patrick Silva 2024-01-31 09:27:00 UTC
Can reproduce on neon unstable.
Comment 3 Méven Car 2024-02-29 16:24:14 UTC
That's a regression from the wallpaper setting dbus work.
desktop:/ needs to get fixed or use the dbus setting.
Comment 4 Ilya Bizyaev 2024-04-19 19:02:11 UTC
For testing: restarting plasmashell is enough to confirm this bug,
Comment 5 Nate Graham 2024-12-18 17:50:16 UTC
*** Bug 497631 has been marked as a duplicate of this bug. ***
Comment 6 Bug Janitor Service 2024-12-30 20:30:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5024
Comment 7 Nate Graham 2024-12-31 03:58:33 UTC
Git commit 18871a36076e8038dc5db98b4f165c612e5e6675 by Nate Graham, on behalf of Tino Lorenz.
Committed on 31/12/2024 at 03:58.
Pushed by ngraham into branch 'master'.

wallpapers/image: Save config after dropping image

Sync the wallpaper config to disk after setting a wallpaper by
drag-and-dropping an image to the desktop.
FIXED-IN: 6.3

M  +2    -1    wallpapers/image/imagepackage/contents/ui/main.qml
M  +2    -1    wallpapers/image/plugin/model/imageproxymodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/18871a36076e8038dc5db98b4f165c612e5e6675