wallpapers/image: Save config after dropping image

Sync the wallpaper config to disk after setting a wallpaper by
drag-and-dropping an image to the desktop.

BUG: 480509
FIXED-IN: 6.3